<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ds.louri.askyourself.temas"
    android:background="@drawable/bg21">

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/historia"
        android:id="@+id/historia"
        android:clickable="true"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:height="45dp"
        android:width="110dp"
        android:layout_alignTop="@+id/ciencia"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_blue"
        android:textSize="10dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/arte"
        android:id="@+id/arte"
        android:layout_below="@+id/historia"
        android:layout_alignParentStart="true"
        android:width="110dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/rounded_blue"
        android:layout_marginTop="5dp"
        android:textSize="10dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/deporte"
        android:id="@+id/deportes"
        android:layout_below="@+id/arte"
        android:layout_alignEnd="@+id/arte"
        android:width="110dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/rounded_blue"
        android:layout_marginTop="5dp"
        android:textSize="10dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/ciencia"
        android:id="@+id/ciencia"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="69dp"
        android:width="110dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/rounded_blue"
        android:textSize="10dp"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/geografia"
        android:id="@+id/geografia"
        android:layout_below="@+id/ciencia"
        android:layout_alignStart="@+id/ciencia"
        android:width="110dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/rounded_blue"
        android:layout_marginTop="5dp"
        android:textSize="10dp"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/entretenimiento"
        android:id="@+id/entretenimiento"
        android:layout_alignBottom="@+id/deportes"
        android:layout_alignStart="@+id/geografia"
        android:width="110dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/rounded_blue"
        android:layout_marginTop="5dp"
        android:textSize="10dp"
        android:layout_alignParentRight="true" />

</RelativeLayout>
