<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ds.louri.askyourself.question"
    android:background="@drawable/bg2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/respuesta1"
            android:id="@+id/respuesta1"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:textSize="10dp"
            android:background="@drawable/rounded_blue"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:typeface="sans"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/respuesta2"
            android:id="@+id/respuesta2"
            android:layout_gravity="center"
            android:clickable="true"
            android:textSize="10dp"
            android:background="@drawable/rounded_blue"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:typeface="sans" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/respuesta3"
            android:id="@+id/respuesta3"
            android:layout_gravity="center"
            android:clickable="true"
            android:textSize="10dp"
            android:background="@drawable/rounded_blue"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:typeface="sans" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/respuesta4"
            android:id="@+id/respuesta4"
            android:layout_gravity="center"
            android:clickable="true"
            android:textSize="10dp"
            android:background="@drawable/rounded_blue"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:typeface="sans" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pregunta"
        android:id="@+id/pregunta"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:textColor="#000000"
        android:textSize="10dp"
        android:typeface="sans"
        android:background="@drawable/results"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textIsSelectable="false" />

</RelativeLayout>
